2010-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule on the use of TypeDefinition.Constructors property
	* InstructionMatcher.cs: Fix when "ldarg 0" is used instead of 
	the, much more common, "ldarg_0"

2010-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionMatcher.cs: Rework AreEquivalent to avoid memory
	allocations when comparing operands (like MethodReferences).
	This makes the rules using the matcher 2 times faster.

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLargeClassesRule.cs: Apply AvoidRepetitiveCallsToProperties
	Rule on MemberReference::get_Name (6)
	* AvoidLongParameterListsRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule on MemberReference::get_Name

2010-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMessageChainsRule.cs: Change MaxChainLength from 5 to 4 
	and condition from >= to > (same effect) so the rule description
	(and documentation) makes more sense.

2010-03-24  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeDuplicatedLocator.cs: Add [Conditional("DEBUG")] on 
	WriteToOutput. Fix typo IsExtractableToMethodBlock
	* InstructionMatcher.cs: Use rocks to cover all LDARG* and LDLOC*
	* Pattern.cs: Don't try to be too precise when checking compiler
	generated patterns since this only makes it difficult to support
	many compilers and adds false positives. New logic is more 
	permissive (IL wise), more (operand wise) and less (IL wise)
	precise and should cover more compilers while reducing false 
	positive (but it could fail to report some cases - which is less
	problematic than reporting false positive IMO)

2010-03-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongMethodsRule.cs: Add more types (from Workflow and 
	Silverlight) that use InitializeComponent to be ignored. Patch
	by Jeff Craig.

2010-01-24  Sebastien Pouliot  <sebastien@ximian.com>
